header rough draft

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,9 @@
-$header1-bg: #3BC8FF;
+$header1-bg: #e13dff;
+$header1-border: #8535e8;
+$header1-hover-text: #e13dff;
+$header1-hover-bg: #FFF;
+$header1-hover-border: #e13dff;
+$header1-hover-icon: #FFF;
 
 .push-right {
     margin-left: auto;
