--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,15 +8,16 @@
     display: flex;
     align-items: center;
     z-index: 10;
+    border-bottom: 1px solid $header-full-bottom-border;
+    box-shadow: 1px 1px 5px #3BC8FF;
 }
 
 .header-logo {
-    max-width: 70px;
-    height: auto;
+    height: 100%;
+    margin-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
 
     .header-logo-img {
         width: 100%;
@@ -26,15 +27,13 @@
 
 .header-nav {
     display: flex;
-    // margin-right: 10px;
     height: 100%;
-    // margin-bottom: 15px;
     align-items: center;
 }
 
 .header-nav-item {
     background: $header1-bg;
-    color: white;
+    color: $header1-text;
     width: 125px;
     height: 100%;
     font-size: 16px;
@@ -53,7 +52,7 @@
         align-items: center;
         justify-content: center;
         color: $header1-bg;
-        background: white;
+        background: $header1-icon;
         width: 32px;
         height: 32px;
         font-size: 16px;
@@ -92,7 +91,29 @@
         font-size: 24px;
         width: 50px;
         height: 50px;
-        background: $header1-bg;
+        background: $header1-hover-icon-bg;
         color: $header1-hover-icon;
     }
+}
+
+.header-logo-s {
+    padding: 5px 15px;
+    background: $header-logo-s-bg;
+    border: 3px solid $header-logo-s-border;
+    border-radius: 5px;
+    margin-right: 2px;
+}
+
+.header-text {
+    font-family: Zwodrei;
+    margin-left: 20px;
+    color: $header-logo-text;
+    font-size: 32px;
+    width: auto;
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: Zwodrei;
+    src: url(../../fonts/Zwodrei.woff2);
 }
