--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+.just-holding-these {
   background: #e13dff;
   background: #8535e8;
   background: #5047FF;
@@ -7,7 +7,7 @@
   background: #4D4A80;
   background: #282480;
   background: #001740;
-  background: #FFF;
+  background: #4D4A80;
   /* background: #000; */
 }
 
