about page, fixed intro

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,9 @@ $header1-logo-s-bg: #FFF;
 $header1-logo-text-hover: #282480;
 $header1-logo-border-hover: #282480;
 
+$title-color: black;
+$sub-title-color: #888888;
+
 body {
     background: $app-bg;
 }
@@ -36,15 +39,21 @@ body {
     margin: auto;
     background: white;
     box-shadow: 0px -2px 5px #888888;
-    height: calc(100vh - 90px);
+    min-height: calc(100vh - 90px);
+    height: auto;
 }
 
 .content-container {
     padding: 40px;
+    min-height: calc(100vh - 90px);
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
+}
+
+.italic {
+    font-style: italic;
 }
 
 @media (max-width: 1028px) {
