--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -73,27 +73,29 @@
     }
 }
 
-.header-nav-item:hover  {
-    background: $header1-hover-bg;
-    .header-nav-icon {
-        font-size: 24px;
-        width: 50px;
-        height: 50px;
-        background: $header1-hover-icon-bg;
-        color: $header1-hover-icon;
-    }
-
-    .header-nav-label {
-        color: $header1-hover-text;
-        top: 100%;
-        border: 2px solid $header1-hover-border;
-        border-top: none;
-        font-size: 18px;
+@media (min-width: 1028px) {
+    .header-nav-item:hover  {
         background: $header1-hover-bg;
-        padding-bottom: 5px;
-        border-bottom-left-radius: 6px;
-        border-bottom-right-radius: 6px;
-        font-weight: 600;
+        .header-nav-icon {
+            font-size: 24px;
+            width: 50px;
+            height: 50px;
+            background: $header1-hover-icon-bg;
+            color: $header1-hover-icon;
+        }
+
+        .header-nav-label {
+            color: $header1-hover-text;
+            top: 100%;
+            border: 2px solid $header1-hover-border;
+            border-top: none;
+            font-size: 18px;
+            background: $header1-hover-bg;
+            padding-bottom: 5px;
+            border-bottom-left-radius: 6px;
+            border-bottom-right-radius: 6px;
+            font-weight: 600;
+        }
     }
 }
 
@@ -113,7 +115,7 @@
     background: $header1-logo-s-bg;
     border: 3px solid $header1-logo-s-border;
     border-radius: 5px;
-    margin-right: 2px;
+    margin-right: 5px;
     transition: border-color .25s;
 }
 
@@ -155,7 +157,7 @@
         align-items: center;
         margin-left: auto;
         min-width: 40px;
-        padding-left: 20px;
+        // padding-left: 20px;
         cursor: pointer;
     }
 
@@ -168,6 +170,7 @@
         z-index: 100;
         margin-top: calc(#{$header-height} + 5px);
         transition: all 0.5s linear, opacity 0.25s linear;
+        background: $header1-bg;
         position: absolute;
         max-height: 0;
         min-height: 0;
