--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -39,8 +39,8 @@
 @keyframes text-intro {
     0% {top: 60%; opacity: 0;}
     20%, 67% {top: 45%; left: 45%; opacity: 1;}
-    95% {top: 10%; left: 3%; opacity: 0.1;}
-    100% {top: 0%; left: 0%; opacity: 0; display: none;}
+    80% {top: 10%; opacity: 0.1;}
+    100% {top: 0%; opacity: 0; display: none;}
 }
 
 @keyframes reveal-page {
@@ -50,6 +50,6 @@
 }
 
 @keyframes hide-text {
-    0% { top: 45%; left: 45%; opacity: 1;}
-    100% { top: 0%; left: 0%; opacity: 0;}
+    0% { top: 45%;  opacity: 1;}
+    100% { top: 0%; opacity: 0;}
 }
