experience page, minor styling fixes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .page-header {
-    width: 100%;
+    width: 100vw;
     position: fixed;
     height: 90px;
     background-color: $header1-bg;
