--- a/src/pages/experience/experience.scss
+++ b/src/pages/experience/experience.scss
@@ -89,6 +89,15 @@ img.exp-icon {
     }
 }
 
+.exp-resume-button-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50px;
+    margin-bottom: 20px;
+}
+
 @media (max-width: 576px) {
     .exp-container {
         padding: 0;
