cleaned up about page's styling, cleaned up mobile animation of burger menu

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -187,7 +187,7 @@
         width: 100%;
         z-index: 100;
         margin-top: $header-height;
-        transition: all 0.5s linear, opacity 0.25s linear;
+        transition: all 0.5s linear, opacity 0.3s ease-in-out, max-height 0.5s ease-out, min-height 0.55s ease-out;
         background: $header1-bg;
         position: absolute;
         max-height: 0;
