styling for posts, got more post data in it, started populating post data on page

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,9 @@ $input-border: #3BC8FF;
 
 $error-text: red;
 
+$card-border: #f8f8f8;
+$card-shadow: #888;
+
 body {
     background: $app-bg;
     overflow-y: overlay;
