--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -176,6 +176,7 @@
         margin-left: auto;
         min-width: 40px;
         // padding-left: 20px;
+        margin-right: 20px;
         cursor: pointer;
     }
 
