--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -27,13 +27,22 @@
     -webkit-animation-duration: 0.5s; /* Safari 4.0 - 8.0 */
     animation: text-intro forwards;
     animation-duration: 2s;
+}
 
-    // -webkit-animation-delay: 1.5s;
-    // animation-delay: 1s;
-    // -webkit-animation: hide-text forwards; /* Safari 4.0 - 8.0 */
-    // -webkit-animation-duration: 0.5s; /* Safari 4.0 - 8.0 */
-    // animation: hide-text forwards;
-    // animation-duration: 1s;
+@media (max-width: 576px) {
+    .intro-text {
+        -webkit-animation: mobile-text-intro forwards; /* Safari 4.0 - 8.0 */
+        -webkit-animation-duration: 0.5s; /* Safari 4.0 - 8.0 */
+        animation: mobile-text-intro forwards;
+        animation-duration: 2s;
+    }
+}
+
+@keyframes mobile-text-intro {
+    0% {top: 60%; opacity: 0;}
+    20%, 67% {top: 45%; left: 41%; opacity: 1;}
+    80% {top: 10%; opacity: 0.1;}
+    100% {top: 0%; opacity: 0; display: none;}
 }
 
 @keyframes text-intro {
