finished styling post

--- a/src/pages/blog/blog.scss
+++ b/src/pages/blog/blog.scss
@@ -102,7 +102,7 @@
 }
 
 @media (max-width: 576px) {
-    .content-container {
+    .blog .content-container {
         padding: 0px !important;
         // padding-top: 10px !important;
     }
