--- a/src/pages/experience/experience.scss
+++ b/src/pages/experience/experience.scss
@@ -139,15 +139,17 @@ img.exp-icon {
         transition: all 0.25s;
         padding: 3px 0;
     }
-    .exp-quick-nav-item:active {
+    .exp-quick-nav-item.exp-sub-nav-hit {
         background: $header1-hover-bg;
         color: $header1-hover-text;
+        font-size: 18px;
     }
 
     .exp-quick-nav-item:last-of-type {
         border-right: none;
     }
 }
+
 @media (max-width: 768px) {
     .exp-label {
         font-size: 24px;
